# scrape-master

./: .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
app/: .env.sample  app.py  assets.py  pagination_detector.py  scraper.py
